Fix to work with newer versions

--- a/processor/src/main/resources/application.conf
+++ b/processor/src/main/resources/application.conf
@@ -1,12 +1,19 @@
 akka {
   actor {
-    provider = "akka.remote.RemoteActorRefProvider"
+    provider = remote
+    serializers {
+      jackson-json = "akka.serialization.jackson.JacksonJsonSerializer"
+    }
+    serialization-bindings {
+      "com.typesafe.akkademo.common.Message" = jackson-json
+    }
   }
 
   remote {
-    netty {
-      hostname = "127.0.0.1"
-      port = 2553
+    artery {
+      transport = tcp
+      canonical.hostname = "127.0.0.1"
+      canonical.port = 2553
     }
   }
 }
